# clouduploader-py

./: LICENSE  README.md  pyproject.toml  walkthrough.md
.github/workflows/: publish.yml
cloud_uploader/: __init__.py  client.py  exceptions.py  http_client.py  multipart.py  uploader.py  utils.py
examples/: basic_upload.py
tests/: test_client.py  test_exceptions.py  test_http_client.py  test_utils.py
