[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clouduploader-py"
version = "0.1.2"
description = "Python SDK for the CloudUploader file-upload platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CloudUploader Team"},
]
keywords = ["cloud", "upload", "s3", "r2", "presigned-url", "multipart"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://github.com/CloudUploader/clouduploader-py"
Repository = "https://github.com/CloudUploader/clouduploader-py"
Documentation = "https://docs.clouduploader.io/sdk/python"

[tool.setuptools.packages.find]
include = ["cloud_uploader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
